test/test-cases/negative/if-errors.pas

Program test(input, output);

Var int: integer;
  bol : boolean;
Begin
  If bol = int Then
    int := 1
  Else
    int := 2
End.
